# fastapi

./: .gitignore  docker-compose.yml
backend/: Dockerfile  docker-entrypoint-dev.sh  pyproject.toml  setup.cfg
backend/.envs/: .env.dev
backend/app/: backend_start.py  initial_data.py
backend/app/api/: routers.py  server.py
backend/app/auth/: config.py  exceptions.py  routes.py
backend/app/auth/services/: write_token_to_db.py
backend/app/core/: config.py  exceptions.py  mixins.py  scheme_base.py  tasks.py  utils.py
backend/app/core/services/: create_user_service.py  password_service.py
backend/app/crud/: __init__.py  crud_figures.py  crud_token.py  crud_user.py  crud_user_profile.py
backend/app/db/: init_db.py  session.py  tasks.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 00087e6d1965_fix_typo_in_user_model.py  016c23f38538_added_initial_table.py  26955b5df6a1_added_description_field_for_figure_model.py  3fb4cb05ad22_fixes.py  4fad59946e6d_added_token_model_and_fix_user_model.py  5323e78a61de_added_user_profiel.py  cb58512b1c91_added_multiline_figure.py  d6d7e9ae27b7_added_expiration_date_for_token_model.py  df64f4aa9aa6_add_password.py  (+1 more)
backend/app/db/repositories/: cleanings.py
backend/app/models/: __init__.py  choices.py  figures.py  token.py  user.py
backend/app/schemas/: core.py  figures.py  token.py  user.py  user_profile.py
backend/app/statistics/: routes.py
backend/app/statistics/services/: create_multiline_figure.py
backend/app/user_profile/: routes.py
backend/app/users/: routes.py
