[tool.poetry]
name = "auth-server-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
email-validator = "^1.1.3"
uvicorn = "^0.17.5"
alembic = "^1.7.6"
SQLAlchemy = "^1.4.32"
databases = {extras = ["postgresql"], version = "^0.5.5"}
psycopg2-binary = "^2.9.3"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.2"
httpx = "^0.22.0"
asgi-lifespan = "^1.0.1"
tenacity = "^8.0.1"
fastapi-jwt-auth = "^0.5.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
asyncpg = "^0.25.0"
isort = "^5.10.1"
black = "^22.3.0"
python-multipart = "^0.0.5"
fastapi-camelcase = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
